--- a/FourthProject.html
+++ b/FourthProject.html
@@ -79,7 +79,7 @@
 						<div class="wrapper">
 							<div class="inner">
 
-								<h3 class="major">Tower of Hanoi</h3>
+								<h3 class="major">Tower of Hanoi (Microsoft Visual studio C#)</h3>
 								This projects was done during my first programming course taken at Södertörn University. It was the first real challenge I faced on my road to learning 
 								programming and game development. <br><br>
 
@@ -129,7 +129,7 @@
 
 								<br>
 								<br>
-								<h3 class="major">Chinese Checkers</h3>
+								<h3 class="major">Chinese Checkers (unity C#)</h3>
 								This project was part of our second course of programming. We recieved an already created chinese checkers project, in this project we had to add in 
 								 functions for all the already probivided methods. Our task was to read and understand the code provided and then apply solutions in order to create 
 								 a functioning chinese checkers game.<br><br>
