--- a/SecondProject.html
+++ b/SecondProject.html
@@ -60,7 +60,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Oilbaby</h2>
+								<h2>Oilbaby (unity C#)</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/Oilbaby.jpg" alt="" /></span></div>
 								</div>
