--- a/FirstProject.html
+++ b/FirstProject.html
@@ -61,7 +61,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>shuras' gauntlet</h2>
+								<h2>shuras' gauntlet (unity C#)</h2>
 								<div class="row gtr-uniform">
 									<div class="col-4"><span class="image fit"><img src="images/Shuras.png" alt="" /></span></div>
 								</div>
